# blueberry-colortools

./: blueberry.py  pyproject.toml
resources/styles/: custom_colormaps.csv
src/: ColorButton.py  ColorPicker.py  ColorSelector.py  ColormapEditor.py  CustomWidgets.py  config.py  controls.py
src/blueberry/: __init__.py
src/blueberry_colortools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
