[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueberry-colortools"
version = "0.1.0"
description = "Colormap editor and colour picker/selector widgets"
requires-python = ">=3.11"
dependencies = [
    "PyQt6",
    "numpy",
    "matplotlib",
    "cmcrameri",
    "Pillow",
    "scikit-learn",
    "lame-core",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"blueberry" = ["resources/styles/*.csv"]
